--- a/makefile.am
+++ b/makefile.am
@@ -44,9 +44,9 @@ clean:
 $(AMIGASRC)/graphics.68k: $(ASSETS)/convert_graphics.py
 	cmd /c $(ASSETS)\convert_graphics.py
 
-
-#$(AMIGASRC)/sounds.68k: $(ASSETS)/convert_sounds.py $(ASSETS)/../sounds/$(PROGNAME)500_conv.mod
-#	cmd /c $(ASSETS)\convert_sounds.py
+#$(ASSETS)/../sounds/$(PROGNAME)500_conv.mod
+$(AMIGASRC)/sounds.68k: $(ASSETS)/convert_sounds.py 
+	cmd /c $(ASSETS)\convert_sounds.py
 	
 $(MAIN): $(OBJS)
 	$(GCC_BIN)m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(MAIN) $(OBJS)
