--- a/makefile.am
+++ b/makefile.am
@@ -1,5 +1,7 @@
 PROGNAME = phoenix
-MAIN = ..\$(PROGNAME)
+MAIN_AGA = ..\$(PROGNAME)_aga
+MAIN_OCS = ..\$(PROGNAME)_ocs
+AMIGA_SHELL = ..\$(PROGNAME)
 
 
 ifdef RELEASE_BUILD
@@ -17,12 +19,17 @@ GCC_BIN =
 ASM_BASE = $(GCC_BIN)m68k-amigaos-as -c --defsym __amiga__=1 
 ASM = $(ASM_BASE) -m68000 $(OPT_RELEASE) 
 ASM_020 = $(ASM_BASE) -m68020 
-MAIN_OBJ = amiga.o
 WHDLOADER = ..\$(PROGNAME).slave
 WHDLOADER_CHIP = ..\$(PROGNAME)_chip.slave
+WHDLOADER_AGA = ..\$(PROGNAME)_AGA.slave
+WHDLOADER_AGA_CHIP = ..\$(PROGNAME)_AGA_chip.slave
 ASSETS = ..\assets\amiga
-AMIGASRC = amiga
-SOURCE = $(AMIGASRC)/$(PROGNAME)HD.s
+AMIGA_SRC = amiga
+OCS_MAIN_OBJ = ocs.o
+AGA_MAIN_OBJ = aga.o
+AMIGA_SHARED_SRC = amiga
+SOURCE = $(AMIGA_ECS_SRC)/$(PROGNAME)HD.s
+SOURCE_AGA = $(AMIGA_AGA_SRC)/$(PROGNAME)HD.s
 
 
 
@@ -34,27 +41,41 @@ WHDASM = vasmm68k_mot -DDATETIME -I$(HDBASE)/amiga39_JFF_OS/include -I$(WHDBASE)
 
 
 # leave MAIN_OBJ first
-OBJS = $(MAIN_OBJ) game_rom.o sounds.o $(PROGNAME).o vbr.o graphics.o ReadJoyPad.o ptplayer.o 
-all: $(AMIGASRC)/graphics.68k $(AMIGASRC)/sounds.68k $(MAIN) $(WHDLOADER) $(WHDLOADER_CHIP)
+OBJS_OCS = $(OCS_MAIN_OBJ) game_rom.o sounds.o $(PROGNAME).o vbr.o graphics_ocs.o ReadJoyPad.o ptplayer.o 
+OBJS_AGA = $(AGA_MAIN_OBJ) game_rom.o sounds.o $(PROGNAME).o vbr.o graphics_aga.o ReadJoyPad.o ptplayer.o 
 
+#$(MAIN_AGA) 
+all: $(MAIN_OCS) $(AMIGA_SHELL) $(WHDLOADER) $(WHDLOADER_CHIP) $(WHDLOADER_AGA) $(WHDLOADER_AGA_CHIP) 
+
+$(AMIGA_SHELL): shell.o
+	$(GCC_BIN)m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(AMIGA_SHELL) shell.o
 
 clean:
-	del $(OBJS) "$(MAIN)"
+	del $(OBJS) "$(MAIN_OCS)" "$(MAIN_AGA)" $(AMIGA_SHELL) shell.o
 	
-$(AMIGASRC)/graphics.68k: $(ASSETS)/convert_graphics.py
-	cmd /c $(ASSETS)\convert_graphics.py
+shell.o: $(AMIGA_SHARED_SRC)/shell.68k
+	$(ASM) -Iamiga $(AMIGA_SHARED_SRC)/shell.68k -o shell.o
+$(AMIGA_OCS_SRC)/graphics.68k: $(ASSETS)/convert_graphics_ocs.py
+	cmd /c $(ASSETS)\convert_graphics_ecs.py
 
-#$(ASSETS)/../sounds/$(PROGNAME)500_conv.mod
-$(AMIGASRC)/sounds.68k: $(ASSETS)/convert_sounds.py 
+$(AMIGA_AGA_SRC)/graphics.68k: $(ASSETS)/convert_graphics_aga.py
+	cmd /c $(ASSETS)\convert_graphics_aga.py
+
+$(AMIGASRC)/sounds.68k: $(ASSETS)/convert_sounds.py $(ASSETS)/../sounds/$(PROGNAME)500_conv.mod
 	cmd /c $(ASSETS)\convert_sounds.py
 	
-$(MAIN): $(OBJS)
-	$(GCC_BIN)m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(MAIN) $(OBJS)
+$(MAIN_OCS): $(OBJS_OCS)
+	$(GCC_BIN)m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(MAIN_OCS) $(OBJS_OCS)
+
+$(MAIN_AGA): $(OBJS_AGA)
+	$(GCC_BIN)m68k-amigaos-ld $(OPT_RELEASE_LINK) -o $(MAIN_AGA) $(OBJS_AGA)
 
 $(PROGNAME).o: $(PROGNAME).68k $(PROGNAME).inc $(PROGNAME)_ram.68k $(PROGNAME)_game_ram.68k
 	$(ASM) $(PROGNAME).68k -o $(PROGNAME).o
-amiga.o: $(AMIGASRC)/amiga.68k $(AMIGASRC)/sound_entries.68k $(PROGNAME).inc $(AMIGASRC)/ReadJoyPad.i $(AMIGASRC)/palette.68k
-	$(ASM) -Iamiga $(AMIGASRC)/amiga.68k -o amiga.o
+ocs.o: $(AMIGA_SRC)/amiga.68k $(AMIGA_SRC)/sound_entries.68k $(PROGNAME).inc $(AMIGA_SRC)/ReadJoyPad.i
+	$(ASM) -Iamiga -Iocs $(AMIGA_OCS_SRC)/amiga.68k -o $(OCS_MAIN_OBJ)
+aga.o: $(AMIGA_SRC)/amiga.68k $(AMIGA_SRC)/sound_entries.68k $(PROGNAME).inc $(AMIGA_SRC)/ReadJoyPad.i
+	$(ASM_020) -DAGA -Iamiga -Iaga $(AMIGA_SRC)/amiga.68k -o $(AGA_MAIN_OBJ)
 vbr.o: $(AMIGASRC)/vbr.68k
 	$(ASM_020) -Iamiga $(AMIGASRC)/vbr.68k -o vbr.o
 ptplayer.o: $(AMIGASRC)/ptplayer.68k
@@ -65,8 +86,10 @@ ReadJoyPad.o: $(AMIGASRC)/ReadJoyPad.68k amiga/ReadJoyPad.i
 	$(ASM) -I$(AMIGASRC) $(AMIGASRC)/ReadJoyPad.68k -o ReadJoyPad.o
 game_rom.o: game_rom.68k
 	$(ASM) game_rom.68k -o game_rom.o
-graphics.o: $(AMIGASRC)/graphics.68k $(PROGNAME).inc
-	$(ASM) $(AMIGASRC)/graphics.68k -o graphics.o
+graphics_aga.o: $(AMIGA_SRC)/graphics_aga.68k $(PROGNAME).inc
+	$(ASM) $(AMIGA_SRC)/graphics_aga.68k -o graphics_aga.o
+graphics_ocs.o: $(AMIGA_SRC)/graphics_ocs.68k $(PROGNAME).inc
+	$(ASM) $(AMIGA_SRC)/graphics_ocs.68k -o graphics_ocs.o
 
 
 
@@ -77,3 +100,9 @@ $(WHDLOADER) : $(SOURCE)
 $(WHDLOADER_CHIP) : $(SOURCE)
 	wdate.py> datetime
 	$(WHDASM) -DCHIP_ONLY -o $(WHDLOADER_CHIP) $(SOURCE)
+$(WHDLOADER_AGA) : $(SOURCE_AGA)
+	wdate.py> datetime
+	$(WHDASM) -o $(WHDLOADER_AGA) $(SOURCE_AGA)
+$(WHDLOADER_AGA_CHIP) : $(SOURCE_AGA)
+	wdate.py> datetime
+	$(WHDASM) -DCHIP_ONLY -o $(WHDLOADER_AGA_CHIP) $(SOURCE_AGA)
